[gd_scene load_steps=9 format=3 uid="uid://babkgsn6p2t0g"]

[ext_resource type="Script" path="res://Scripts/Objects/Weapones/weapon_sword.gd" id="1_ihy2c"]
[ext_resource type="Texture2D" uid="uid://dkp0vedhjalff" path="res://Textures/Weapones/weapon_sword_1.png" id="2_wcgvx"]
[ext_resource type="Texture2D" uid="uid://xkdmrrmu4qaf" path="res://Textures/Effects/slash_effect_anim_spritesheet.png" id="3_greof"]
[ext_resource type="AudioStream" uid="uid://b2hnp3llwoyug" path="res://Audio/Sound/Weapons/Sword/promah-pri-boe-na-mechah.mp3" id="4_6c2i4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vwkkc"]
radius = 2.0
height = 14.0

[sub_resource type="Animation" id="Animation_jg20q"]
resource_name = "Attack"
length = 1.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.8, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.5708, 2.0944, 2.0944, -1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.8, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-0.785398, 0.698132, 0.872665, 0.872665, -0.785398]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SlashSprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SlashSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sword/Sprite2D/Area2D/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_vv58h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.785398]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sword:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SlashSprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SlashSprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sword/Sprite2D/Area2D/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tg7tn"]
_data = {
"Attack": SubResource("Animation_jg20q"),
"RESET": SubResource("Animation_vv58h")
}

[node name="Weapon_Sword" type="Node2D"]
rotation = -1.5708
script = ExtResource("1_ihy2c")
damage = 3
metadata/_edit_lock_ = true

[node name="Sword" type="Node2D" parent="."]
rotation = -1.5708

[node name="Sprite2D" type="Sprite2D" parent="Sword"]
position = Vector2(8, 3)
rotation = -0.785398
texture = ExtResource("2_wcgvx")
offset = Vector2(5, -4)

[node name="Area2D" type="Area2D" parent="Sword/Sprite2D"]
position = Vector2(-3.53553, -7.77818)
rotation = 0.785398
collision_layer = 2
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword/Sprite2D/Area2D"]
position = Vector2(9, -4)
shape = SubResource("CapsuleShape2D_vwkkc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tg7tn")
}

[node name="SlashSprite2D" type="Sprite2D" parent="."]
position = Vector2(18, 0)
texture = ExtResource("3_greof")
hframes = 3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6c2i4")

[connection signal="body_entered" from="Sword/Sprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Sword/Sprite2D/Area2D" to="." method="_on_area_2d_body_exited"]
